# documentation

./: Cargo.toml  build.rs  config.yaml
source/: README.md  SUMMARY.md  book.toml
source/api/: data-types.md  errors.md  graphql.md  operations.md  rest.md
source/appendix/: api-compatibility.md  benchmarks.md  migration.md
source/architecture/: overview.md  plugins.md  security.md  storage.md  telemetry.md
source/concepts/: applications.md  extensions.md  resources.md  routing.md  schemas.md
source/contributing/: architecture-decisions.md  development-setup.md
source/deployment/: backup.md  monitoring.md  performance.md  production.md
source/examples/: overview.md
source/getting-started/: first-application.md  installation.md  quickstart.md
source/guides/: app-structure.md  application-development.md  auth-attributes.md  auth-basic.md  auth-hooks.md  auth-jwt.md  auth-oauth.md  auth-overview.md  auth-rbac.md  building-extensions.md  caching.md  crud.md  custom-resources.md  data-operations.md  defining-schemas.md  event-subscribers.md  extension-lifecycle.md  field-selection.md  fiql.md  full-page-cache.md  graphql.md  pagination.md  pubsub.md  rate-limiting.md  realtime-overview.md  redirects.md  relationships.md  seed-data.md  sse.md  static-files.md  table-expiration.md  telemetry.md  vector-search.md  websocket.md
source/reference/: app-config.md  cli.md  environment-variables.md  schema-directives.md  server-config.md  tls.md
source/theme/: custom.css  index.hbs  tomorrow-night.css  yeti.css
