[package]
name = "yeti-documentation"
version = "1.0.0"
edition = "2024"

# This Cargo.toml serves two purposes:
# 1. Documents the build dependencies for this application
# 2. Provides a way to build documentation using `cargo run --bin build-docs`

[[bin]]
name = "build-docs"
path = "build.rs"

[dependencies]
# mdBook library for programmatic builds
mdbook = "0.4"
anyhow = "1.0"

[build-dependencies]
# mdBook library for build scripts
mdbook = "0.4"
anyhow = "1.0"
